# FastAPI_TDD

./: .gitignore  docker-compose.yml  pyproject.toml  pytest.ini  readme.md  requirements.txt
store/core/: config.py
store/db/: mongo.py
store/schemas/: product.py
tests/schemas/: test_product.py
